--- a/08-discussion.tex
+++ b/08-discussion.tex
@@ -1,5 +1,10 @@
 \section{Discussion} % (fold)
 \label{sec:discussion}
+In this section we will look back at the problem introduced in section \ref{sec:introduction} and evaluate the implementation of Raft. This will be done by comparing our test results with the requirements stated in section \ref{sec:requirements}. Doing this, we can reflect on the overall goal of the project i.e. to gain deeper knowledge of Raft. Further extensions and improvements to the end product will then be proposed and discussed.
+
+\subsection{Reflection on goal}
+
+\subsection{Further work}
 
 % - Hvordan gik det?
 % - Hvad var svært?
