Extended discussion and start on leader election section

--- a/05-leader_election.tex
+++ b/05-leader_election.tex
@@ -1,6 +1,6 @@
 \section{Leader Election} % (fold)
 \label{sec:leader_election}
-
+As mentioned in section \ref{sec:raft} one of the two main components of Raft is its leader election. The leader 
 % - Theory
 % - Analysis
 % - Design(?)
