--- a/08-discussion.tex
+++ b/08-discussion.tex
@@ -3,8 +3,12 @@
 In this section we will look back at the problem introduced in section \ref{sec:introduction} and evaluate the implementation of Raft. This will be done by comparing our test results with the requirements stated in section \ref{sec:requirements}. Doing this, we can reflect on the overall goal of the project i.e. to gain deeper knowledge of Raft. Further extensions and improvements to the end product will then be proposed and discussed.
 
 \subsection{Reflection on goal}
+The goal of this project was to learn about what is the state of the art in terms of solving the consensus problem. In order to do this, our approach was to gain knowledge about Raft through implementing it in a simulated environment. The requirements for the implementation stated that it should provide a tool for visualising the behaviour of Raft. TODO
 
+\subsection{Experiences}
+Implementing Raft required some inspiration from other current implementations in order to get a complete and working that reflected the specification in the paper \cite{Raft}. TODO
 \subsection{Further work}
+TODO
 
 % - Hvordan gik det?
 % - Hvad var svært?
