Nicer JavaScript source code

--- a/04-analysis.tex
+++ b/04-analysis.tex
@@ -42,7 +42,7 @@ One important aspect to make this approach work well is to derive the behaviour 
 
 To facilitate writing tests with a BDD-aproach, we used the node lirbaries \href{http://chaijs.com/}{\tt chai} together with \href{http://mochajs.org}{\tt mocha}, which allows us to write tests written as behaviour such as the example seen in code examplre below.
 
-\lstinputlisting[caption=Example of a JavaScript test with the libraries mocha and chai]{code_snippets/chai_mocha_example.js}
+\lstinputlisting[caption=Example of a JavaScript test with the libraries mocha and chai, language=JavaScript]{code_snippets/chai_mocha_example.js}
 
 
 % subsection our_approach (end)
