More proper page counting

--- a/06-log_replication.tex
+++ b/06-log_replication.tex
@@ -56,4 +56,10 @@ All situations of inconcistencies are handled by forcing the followers to duplic
 
 % subsection handling_log_inconsistency (end)
 
+\subsection{Implementation} % (fold)
+\label{sub:log_replication_implementation}
+
+
+
+% subsection implementation (end)
 % section log_replication (end)
