--- a/report.tex
+++ b/report.tex
@@ -159,8 +159,9 @@
   	  	\end{figure}
 \printauthor								% Print the author data as defined above
 \newpage
-\tableofcontents
 \include{00-preface}
+\tableofcontents
+\thispagestyle{empty}       % Remove page numbering on this page
 \include{01-introduction}
 \include{02-raft}
 \include{03-requirements}
